--- a/api_server/Gemfile
+++ b/api_server/Gemfile
@@ -5,6 +5,7 @@ ruby "2.7.2"
 
 # Bundle edge Rails instead: gem "rails", github: "rails/rails", branch: "main"
 gem "rails", "~> 7.0.2", ">= 7.0.2.3"
+gem "dotenv-rails"
 
 # Use postgresql as the database for Active Record
 gem "pg", "~> 1.1"
